# nomegen

./: .travis.yml  LICENSE-MIT  README.md  Setup.lhs  nomegen.cabal  stack.yaml
cli/: Main.hs
cli/Nomegen/: CLI.hs
examples/: english.yaml
gui/: Main.hs
src/: Nomegen.hs
src/Nomegen/: Internal.hs
