name: nomegen
version: 0.0.1
author: Ian D. Bollinger
maintainer: ian.bollinger@gmail.com
copyright: 2015 Ian D. Bollinger
license: MIT
license-file: LICENSE-MIT
homepage: https://github.com/ianbollinger/nomegen
bug-reports: https://github.com/ianbollinger/nomegen/issues
cabal-version: >= 1.10
build-type: Simple
stability: experimental
category: TBD
synopsis: A library and utility for randomly generating names.
tested-with: GHC == 7.8.4, GHC == 7.10.2
description:
    TBD

source-repository head
    type: git
    location: git://github.com/ianbollinger/nomegen.git

source-repository this
    type: git
    location: git://github.com/ianbollinger/nomegen.git
    tag: HEAD

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base >= 4.7 && < 4.9,
        aeson >= 0.8 && < 0.10,
        containers == 0.5.*,
        deepseq >= 1.3 && < 1.5,
        hashable == 1.2.*,
        mwc-random == 0.13.*,
        text == 1.2.*,
        vector >= 0.10 && < 0.12,
        yaml >= 0.8.10 && < 0.9
    exposed-modules:
        Nomegen
        Nomegen.Internal
    ghc-options:
        -Wall
        -fwarn-incomplete-record-updates
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-import-lists
        -fwarn-missing-local-sigs
        -fwarn-monomorphism-restriction
        -fwarn-tabs
        -fwarn-unrecognised-pragmas

executable nomegen
    default-language: Haskell2010
    hs-source-dirs: cli
    main-is: Main.hs
    build-depends:
        base >= 4.7 && < 4.9,
        optparse-applicative == 0.11.*,
        text == 1.2.*,
        nomegen
    other-modules:
        Nomegen.CLI
    ghc-options:
        -Wall
        -fwarn-incomplete-record-updates
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-import-lists
        -fwarn-missing-local-sigs
        -fwarn-monomorphism-restriction
        -fwarn-tabs
        -fwarn-unrecognised-pragmas

executable nomegen-gui
    default-language: Haskell2010
    hs-source-dirs: gui
    main-is: Main.hs
    build-depends:
        base >= 4.7 && < 4.9,
        gtk3 == 0.13.*,
        glib == 0.13.*,
        text == 1.2.*,
        nomegen
    ghc-options:
        -Wall
        -fwarn-incomplete-record-updates
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-import-lists
        -fwarn-missing-local-sigs
        -fwarn-monomorphism-restriction
        -fwarn-tabs
        -fwarn-unrecognised-pragmas
